--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: '关于'
-description: 'Hey, this is ztx'
+description: 'Hey, this is 赵天旭'
 header-img: 'img/post-bg-rwd.jpg'
 ---
 
